--- a/MetersToInches/app/src/main/res/layout/activity_main.xml
+++ b/MetersToInches/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
-        android:id="@+id/convertId"
+        android:id="@+id/convertButtonID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="300dp"
@@ -59,6 +59,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/convertId"
+        app:layout_constraintTop_toBottomOf="@+id/convertButtonID"
         app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
