--- a/RadioButtons/app/src/main/res/layout/activity_main.xml
+++ b/RadioButtons/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
     </RadioGroup>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/attendingText"
         android:layout_width="wrap_content"
         android:layout_height="26dp"
         android:layout_marginBottom="10dp"
