App AlertDialog: Create and show dialog

--- a/AlertDialog/app/src/main/res/layout/activity_main.xml
+++ b/AlertDialog/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,16 @@
     tools:context="br.com.leogsouza.alertdialog.MainActivity">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/showDialogID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="@string/button_text"
-        tools:layout_editor_absoluteX="111dp"
-        tools:layout_editor_absoluteY="231dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
