--- a/RecyclerViewApp/app/src/main/res/layout/activity_main.xml
+++ b/RecyclerViewApp/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context="br.com.leogsouza.recyclerviewapp.MainActivity">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewID"
         android:layout_width="368dp"
         android:layout_height="495dp"
         android:layout_marginBottom="8dp"
