--- a/RecyclerViewApp/app/src/main/res/layout/list_row.xml
+++ b/RecyclerViewApp/app/src/main/res/layout/list_row.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardview"
         android:layout_width="match_parent"
+        android:layout_margin="@dimen/cardview_compat_inset_shadow"
         android:layout_height="wrap_content" >
 
         <LinearLayout
