--- a/RecyclerViewApp/app/src/main/res/layout/list_row.xml
+++ b/RecyclerViewApp/app/src/main/res/layout/list_row.xml
@@ -12,14 +12,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingTop="5dp"
+            android:paddingLeft="14dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/title"
                 android:text="Title"
                 android:layout_weight="1"
-                android:paddingLeft="14dp"
-                android:paddingTop="10dp"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
@@ -29,10 +29,14 @@
                 android:id="@+id/description"
                 android:layout_weight="1"
                 android:text="description"
-                android:paddingTop="5dp"
-                android:paddingLeft="14dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/rating"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Great"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </RelativeLayout>
