--- a/SharedPrefs/app/src/main/res/layout/activity_main.xml
+++ b/SharedPrefs/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,31 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <TextView
+    <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/enterName" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintHorizontal_bias="0.503" app:layout_constraintVertical_bias="0.265"
+            android:hint="@string/enter_name"/>
+    <Button
+            android:text="Save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/saveButton" android:layout_marginTop="28dp"
+            app:layout_constraintTop_toBottomOf="@+id/enterName" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="308dp"
+            android:layout_height="21dp"
+            android:id="@+id/resultTextView" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/saveButton" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintVertical_bias="0.257"/>
 </android.support.constraint.ConstraintLayout>
