--- a/HoneyDoList/app/src/main/res/layout/activity_main.xml
+++ b/HoneyDoList/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-
-    <TextView
+    <EditText
+            android:layout_width="376dp"
+            android:layout_height="237dp"
+            android:inputType="textMultiLine"
+            android:ems="10"
+            android:id="@+id/enterMessage" android:layout_marginTop="8dp"
+            android:textAlignment="center"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.578"
+            app:layout_constraintVertical_bias="0.173" android:hint="@string/todo_list"/>
+    <Button
+            android:text="Save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            android:id="@+id/saveButton" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/enterMessage" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.126"/>
 </android.support.constraint.ConstraintLayout>
